--- a/styles/stile.css
+++ b/styles/stile.css
@@ -38,3 +38,26 @@
     width: 100%;
     border-radius: 40px;
 }
+
+.social-media-buttons{
+    display: flex;
+    gap: 18px;
+}
+
+.social-media-buttons a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 45px;
+    height: 40px;
+    background-color: var(--color-neutra-0);
+    font-size: 1.2rem;
+    border-radius: 10px;
+    color: var(--color-neutra-1);
+    box-shadow: 0px 0px 12px 4px rgba(0,0,0,0.1);
+    transition: box-shadow 0.3 ease;
+}
+
+.social-media-buttons a:hover{
+    box-shadow: 0px 0px 12px 4px rgba(221, 160, 5, 0.7);
+}
