--- a/styles/index.css
+++ b/styles/index.css
@@ -73,6 +73,7 @@ body{
                 15px 10px 48px 16px var(--color-neutra1); 
 }
 .imagem-site:hover{
+    cursor: pointer;
     box-shadow: 5px 0px 12px 4px var(--color-primary4),
                 10px 5px 24px 8px var(--color-primary4),
                 15px 10px 48px 16px var(--color-primary4); 
@@ -233,6 +234,7 @@ body{
 }
 
 .imagem-daora:hover{
+    cursor: pointer;
     box-shadow: 5px 0px 12px 4px var(--color-primary4),
     10px 5px 24px 8px var(--color-primary4),
     15px 10px 48px 16px var(--color-primary4);
@@ -295,6 +297,7 @@ body{
 }
 
 .imagem-bacana1:hover{
+    cursor: pointer;
     box-shadow: 5px 0px 12px 4px var(--color-primary4),
     10px 5px 24px 8px var(--color-primary4),
     15px 10px 48px 16px var(--color-primary4);
@@ -315,6 +318,7 @@ body{
 }
 
 .imagem-bacana2:hover{
+    cursor: pointer;
     box-shadow: 5px 0px 12px 4px var(--color-primary4),
     10px 5px 24px 8px var(--color-primary4),
     15px 10px 48px 16px var(--color-primary4);
@@ -335,6 +339,7 @@ body{
 }
 
 .imagem-bacana3:hover{
+    cursor: pointer;
     box-shadow: 5px 0px 12px 4px var(--color-primary4),
     10px 5px 24px 8px var(--color-primary4),
     15px 10px 48px 16px var(--color-primary4);
@@ -355,6 +360,49 @@ body{
 }
 
 .imagem-bacana4:hover{
+    cursor: pointer;
+    box-shadow: 5px 0px 12px 4px var(--color-primary4),
+    10px 5px 24px 8px var(--color-primary4),
+    15px 10px 48px 16px var(--color-primary4);
+}
+
+.imagem-bacana5{
+    justify-content: space-around;
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    height: 200px;
+    border-radius: 40px;
+    margin-left: 15%;
+    margin-top: 15%;
+    box-shadow: 5px 0px 12px 4px var(--color-neutra1),
+                10px 5px 24px 8px var(--color-neutra1),
+                15px 10px 48px 16px var(--color-neutra1);
+}
+
+.imagem-bacana5:hover{
+    cursor: pointer;
+    box-shadow: 5px 0px 12px 4px var(--color-primary4),
+    10px 5px 24px 8px var(--color-primary4),
+    15px 10px 48px 16px var(--color-primary4);
+}
+
+.imagem-bacana6{
+    justify-content: space-around;
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    height: 200px;
+    border-radius: 40px;
+    margin-left: 13%;
+    margin-top: 15%;
+    box-shadow: 5px 0px 12px 4px var(--color-neutra1),
+                10px 5px 24px 8px var(--color-neutra1),
+                15px 10px 48px 16px var(--color-neutra1);
+}
+
+.imagem-bacana6:hover{
+    cursor: pointer;
     box-shadow: 5px 0px 12px 4px var(--color-primary4),
     10px 5px 24px 8px var(--color-primary4),
     15px 10px 48px 16px var(--color-primary4);
@@ -386,59 +434,30 @@ body{
 }
 
 .area-mariana{
-    width: 100%;
-    height: 320px;
     display: flex;
-    
+    gap: 18px;
+    margin-top: 100%;
+    margin-left: 60.9%;
+
+}
+
+.area-mariana a{
+    display: flex;
     align-items: center;
-    margin-left: 48.9%;
-    margin-top: 90.9%;
-    flex-wrap: wrap;
-
-}
-
-.area-mariana .fa-whatsapp {
+    justify-content: center;
+    width: 45px;
+    height: 40px;
+    background-color: var(--color-primary1);
+    font-size: 1.2rem;
+    border-radius: 10px;
     color: var(--color-neutra1);
-    width: 110%;
-    height: 100%;
-    margin-left: 1000%;
-    margin-top: -300%;
-   
-  
+    box-shadow: 0px 0px 12px 4px var(--color-neutra1);
 
 }
 
-.area-mariana .fa-whatsapp:hover{
+.area-mariana a:hover{
+    box-shadow: 0px 0px 12px 4px var(--color-primary4);
     color: var(--color-primary4);
 }
 
-.area-mariana .fa-linkedin {
-    color: var(--color-neutra1);
-    width: 100%;
-    height: 100%;
-    margin-left: 1200%;
-    margin-top: -300%;
-   
-  
-
-}
-
-.area-mariana .fa-linkedin:hover{
-    color: var(--color-primary4);
-}
-
-.area-mariana .fa-github {
-    color: var(--color-neutra1);
-    width: 100%;
-    height: 100%;
-    margin-left: 1500%;
-    margin-top: -300%;
-   
-  
-
-}
-
-.area-mariana .fa-github:hover{
-    color: var(--color-primary4);
-}
 
